# edsdk-python

./: .gitignore  README.md  pyproject.toml  requirements-examples.txt  setup.py
edsdk/: api.pyi  camera_controller.py  edsdk_python.cpp  edsdk_utils.cpp
edsdk/constants/: properties.py
examples/: live_view.py  rawtopng.py  save_image_new.py
